--- a/assets/css/datanvi.css
+++ b/assets/css/datanvi.css
@@ -7,6 +7,12 @@ section {
     max-width: 200px;
 }
 
+a {
+    text-decoration: none;
+    margin-left: 5px;
+    font-size: 13px;
+}
+
 #sidebar {
     max-width: 300px;
 }
